--- a/app/src/main/res/layout/activity_widget_custom_map_scroll_layout_two_item.xml
+++ b/app/src/main/res/layout/activity_widget_custom_map_scroll_layout_two_item.xml
@@ -4,9 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white"
-   >
-
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/tv"
@@ -17,4 +15,5 @@
 
     <View
         style="@style/Line"/>
+
 </LinearLayout>
