--- a/app/src/main/res/layout/activity_navi_weixin_home.xml
+++ b/app/src/main/res/layout/activity_navi_weixin_home.xml
@@ -16,7 +16,7 @@
     当数据量大时，可以选择 FragmentStatePagerAdapter，用户界面只有少量固定的 fragment 时，可以选择 FragmentPagerAdapter。
     -->
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/vpMain"
         android:layout_width="match_parent"
         android:layout_height="0dp"
