--- a/app/src/main/res/layout/activity_other_github_contrbution.xml
+++ b/app/src/main/res/layout/activity_other_github_contrbution.xml
@@ -17,10 +17,7 @@
         <com.transcendence.blackhole.demo.activation.view.GitHubContributionView
             android:id="@+id/custom"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-
-            />
+            android:layout_height="200dp" />
     </LinearLayout>
-
 
 </LinearLayout>
