--- a/app/src/main/res/layout/activity_scroll_xiaohongshu_main.xml
+++ b/app/src/main/res/layout/activity_scroll_xiaohongshu_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -14,9 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#80000000"
-        />
-
+        android:background="#80000000"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -29,4 +26,4 @@
         app:layout_constraintRight_toRightOf="parent" />
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
