--- a/app/src/main/res/layout/record_dialog2.xml
+++ b/app/src/main/res/layout/record_dialog2.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="20dp"
     android:layout_gravity="center"
+    android:background="@mipmap/record_bg"
     android:gravity="center"
-    android:background="@mipmap/record_bg">
+    android:padding="20dp">
 
-    <ImageView  android:id="@+id/dialog_img"
-    			android:layout_width="wrap_content"
-    		   android:layout_height="wrap_content"
-    		   android:src="@mipmap/record_animate_01"/>
+    <ImageView
+        android:id="@+id/dialog_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/record_animate_01" />
 
 </LinearLayout>
