--- a/wan/src/main/res/layout/activity_mine_my_coin_list_item.xml
+++ b/wan/src/main/res/layout/activity_mine_my_coin_list_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="@dimen/all_width_height"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:padding="@dimen/all_width_height">
 
 
     <TextView
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/text_33"
         android:textSize="@dimen/big_text_x"
-        tools:text="签到"
-        />
+        tools:text="签到" />
+
     <TextView
         android:id="@+id/tvCreateTime"
         android:layout_width="wrap_content"
@@ -23,8 +23,7 @@
         android:layout_below="@id/tvTitle"
         android:textColor="@color/text_99"
         android:textSize="@dimen/standard_text"
-        tools:text="2020"
-        />
+        tools:text="2020" />
 
 
     <TextView
@@ -35,7 +34,6 @@
         android:layout_centerVertical="true"
         android:textColor="@color/text_33"
         android:textSize="@dimen/big_text_x"
-        tools:text="+31"
-        />
+        tools:text="+31" />
 
 </RelativeLayout>
